# qmemory-py

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.surreal  Procfile  pyproject.toml  railway.json  schema.surql
qmemory/: __init__.py  auth.py  cli.py  config.py  constants.py  types.py
qmemory/admin/: cli.py
qmemory/app/: auth.py  config.py  main.py  user_code.py  wordlist.py
qmemory/core/: add_book.py  books.py  correct.py  decay.py  dedup.py  dedup_worker.py  embeddings.py  get.py  health.py  link.py  linker.py  linter.py  metrics.py  person.py  recall.py  reflector.py  save.py  scratchpad.py  search.py  token_budget.py
qmemory/db/: __init__.py  admin_schema.surql  client.py  provision.py  schema.surql  schema_cloud.surql  schema_oauth.surql  seed_oauth_client.surql
qmemory/formatters/: __init__.py  actions.py  budget.py  graph_map.py  memories.py  response.py
qmemory/llm/: __init__.py  anthropic_provider.py  base.py
qmemory/mcp/: __init__.py  errors.py  operations.py  registry.py  schemas.py  server.py
qmemory/nanobot/: __init__.py  bootstrap.py  correct.py  link.py  person.py  save.py  search.py
qmemory/worker/: __init__.py  __main__.py
scripts/: migrate_books.py  migrate_books.surql  migrate_sections_remote.py  migrate_to_sloped.py  railway-worker-setup.md  verify_migration.py
surrealdb/: Dockerfile  backup.sh  railway.json
tests/: conftest.py  test_app_auth.py  test_auth.py  test_db_routing.py  test_provision.py
tests/test_app/: test_user_code.py  test_user_middleware.py
tests/test_core/: test_add_book.py  (+16 more)
(+49 files in other folders)
